2011-09-23  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: InspectorStyleSheet should use stylesheet's original url, not final one.
        https://bugs.webkit.org/show_bug.cgi?id=68631

        Reviewed by Yury Semikhatsky.

        Test: http/tests/inspector/styles/styles-redirected-css.html

        * inspector/InspectorStyleSheet.cpp:
        (WebCore::InspectorStyleSheet::resourceStyleSheetText):

2011-09-23  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: XHRs requests with the same url as main resource should have correct category.
        https://bugs.webkit.org/show_bug.cgi?id=68646

        Reviewed by Yury Semikhatsky.

        Test: http/tests/inspector/network/network-xhr-same-url-as-main-resource.html

        * inspector/InspectorResourceAgent.cpp:
        (WebCore::InspectorResourceAgent::didReceiveResponse):

2011-09-23  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Add context menu action to navigate from resources panel resource to network panel.
        https://bugs.webkit.org/show_bug.cgi?id=68657

        Reviewed by Yury Semikhatsky.

        * English.lproj/localizedStrings.js:
        * inspector/front-end/NetworkPanel.js:
        (WebInspector.NetworkPanel.prototype.showAnchorLocation):
        (WebInspector.NetworkPanel.prototype.revealAndHighlightResource):
        * inspector/front-end/ResourcesPanel.js:
        (WebInspector.FrameResourceTreeElement.prototype._handleContextMenuEvent):
        (WebInspector.FrameResourceTreeElement.prototype._appendOpenInNetworkPanelAction):
        * inspector/front-end/inspector.js:
        (WebInspector.openInNetworkPanelLabel):
        (WebInspector.openRequestInNetworkPanel):

2011-09-23  Deepak Sherveghar  <bpwv64@motorola.com>

        [Gtk] Title attribute is not respected on option elements.
        https://bugs.webkit.org/show_bug.cgi?id=68615

        Reviewed by Martin Robinson.
